# bash2yaml

./: .gitignore  .jiggle_version.config  .pydoctest.json  AGENTS.md  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_SKILLS.md  Justfile  Makefile  PITCH_DECK.md  README.md  ROAD2BASH2YAML.md  SECURITY.md  TASKS.md  exercise_update_checker.py  help.txt  just_import.py  mkdocs.yml  private_dictionary.txt  pyproject.toml  sonar-project.properties  tox.ini
.build/: .gitlab-ci.yml  .gitlab-ci.yml.hash
.circleci/: config.yml
.circleci/uncompiled/: config.yml
.claude/: settings.local.json
.decompile_in/: .gitlab-ci.yml  docs.md
.docker/: Dockerfile  Makefile
.github/workflows/: publish_to_pypi.yml  release.yml
.src/: .gitlab-ci.yml  Makefile  global_variables.sh
bash2gitlab/: __about__.py
bash2yaml/: __about__.py  __init__.py  __main__.py  builtin_plugins.py  config.py  gui.py  hookspecs.py  install_help.py  interactive.py  plugins.py  tui.py  upgrade_integration.py  watch_files.py
bash2yaml/commands/: autogit.py  best_effort_runner.py  clean_all.py  compile_all.py  compile_artifacts.py  compile_bash_reader.py  compile_not_bash.py  copy2local.py  decompile_all.py  detect_drift.py  doctor.py  doctor_checks.py  graph_all.py  hash_path_helpers.py  init_project.py  input_change_detector.py  lint_all.py  map_commit.py  map_deploy.py  pipeline_docs.py  pipeline_trigger.py  precommit.py  show_config.py  traceless_cmds.py  upgrade_pinned_templates.py  validate_all.py
bash2yaml/errors/: exceptions.py  exit_codes.py
bash2yaml/schemas/: bitbucket_pipelines_schema.json  buildspec_schema.json  circleci_schema.json  github_workflow_schema.json  semaphore_schema.json
bash2yaml/targets/: __init__.py  base.py  bitbucket.py  buildspec.py  circleci.py  github.py  gitlab.py  semaphore.py
bash2yaml/utils/: attribution.py  check_interactive.py  diff_helpers.py  github_expressions.py  gitlab_components.py  json_compat.py  logging_config.py  missing_tkinter.py  mock_ci_vars.py  parse_bash.py  pathlib_polyfills.py  state_store.py  toml_reader.py  update_checker.py  urllib3_helper.py  utils.py  validate_pipeline.py  validate_pipeline_bitbucket.py  validate_pipeline_buildspec.py  validate_pipeline_circleci.py  validate_pipeline_github.py  validate_pipeline_semaphore.py  yaml_factory.py  yaml_file_same.py
docs/: CHANGELOG.md  PRIOR_ART.md  index.md  installation.md
docs/extending/: API.md  extending.md
docs/overview/: README.md  who_is_this_for.md
docs/quality_gates/: formatting.md  linting.md  orchestrating.md  testing.md  what_are_quality_gates.md
docs/research/: orchestration.md  yaml_formatting.md
docs/targets/: NEW_TARGET_TASKS.md  supported_targets.md
docs/usage/: commands.md  components.md  config.md  github-reusable.md  traceless.md  usage.md  workflows.md
docs_todo/: TODO.md  Various_TODO.md  pain_points.md
examples/compile/: compile.sh  verify.sh
examples/compile_with_config/: Makefile  README.md  compile.sh  pyproject.toml
examples/decompile/: README.md  shred.sh
examples/decompile_pymarc/: .gitlab-ci.yml  shred.sh
examples/demo_init/: pyproject.toml
examples/github-reusable/: README.md  compile.sh
examples/gitlab-component/: README.md  compile.sh
examples/sample_config/: bash2gitlab.toml  pyproject.toml
examples/traceless/: .gitlab-ci.yml  README.md  walkthrough.sh
scripts/: bash2gitlab.sh  basic_checks.sh  basic_drift.sh  basic_help.sh  check.py  condensor.py  condensor.sh  dogfood.sh  exercise_core_all.sh  log.sh  make_prompt.sh  make_source.sh
scripts/bash_quality_gates/: Justfile  changed-files.sh  lint-changed.sh
spec/: ROAD2BASH2YAML.md  TRACELESS.md  adr-001-ui-surface-tiers.md  fable_says_road_map.md  gaps.md  parity_matrix.md
spec/docs_bip/: BIP-001-artifact-inlining.md
spec/docs_todo/: analysis_compile.md
test/: AGENTS.md  temp_change_dir.py  test_cli.py  test_cli2.py  test_cli_json_stdin.py  test_config.py  test_gui.py  test_integration.py  test_interactive.py  test_tui.py  test_watch_files.py
test/bats/: 00_smoke.bats  10_compile.bats  20_shred.bats  30_detect_drift.bats  40_clean.bats  50_lint.bats  60_suggestions.bats  test_helper.bash
test/suite2/: test_bash_reader.py  test_compile_all.py  test_decompile.py  test_detect_drift.py  test_hash_path_helpers.py  test_input_change_detector.py
test/suite3/: test_compile_target.py  test_config.py  test_decompile_target.py  test_lint_all.py  test_schemas.py  test_validate_pipeline.py
test/test_commands/: test_scenario1.py  test_scenario10.py  test_scenario11.py  test_scenario12.py  test_scenario13.py  test_scenario15.py  test_scenario16_no_quotes.py  test_scenario17_list_confusion.py  test_scenario18_stress.py  test_scenario19_validation.py  test_scenario2.py  test_scenario3.py  test_scenario4.py  test_scenario5.py  test_scenario6.py  test_scenario7.py  test_scenario8.py  test_scenario9.py  test_scenario_buildspec1.py  test_scenario_github1.py  test_scenario_github_reusable.py  test_scenario_gitlab_component.py
test/test_commands_no_scenario/: test_autogit.py  test_bash_reader.py  test_bash_reader_regex.py  test_best_effort_runner.py  test_best_effort_runner_grok5.py  test_bitbucket_target.py  test_buildspec_target.py  test_circleci_target.py  test_clean.py  test_clean_two.py  test_clone2local.py  test_command_process_script_list.py  test_commit_map_command.py  test_compile_all_deep_seek.py  test_compile_all_gpt5.py  test_compile_all_grok3.py  test_compile_all_various.py  test_compile_artifacts.py  test_compile_diff_and_write.py  test_compile_helpers.py  test_compile_helpers_rebuild_seq_like.py  test_compile_not_bash.py  test_decompile.py  test_detect_drift.py  test_doctor.py  test_github_decompile.py  test_github_target.py  test_github_validator.py  (+12 more)
tmp/: parity_audit.py
use_rapid_yaml/: test_yaml_file_same_faster.py  to_python.py  yaml_file_same_faster.py
web/: Dockerfile  README.md  docker-compose.yml  index.html  main.py  requirements.txt  start_server.py  start_web_ui.py
what/: index.html  poc.py  variables_support.py
(+152 files in other folders)
